2002-09-04  Christian Ruppert <arc@gmx.li>
	* uwm/init.c: added grabbing of UWM_MODIFIERS/End which must either
	  have been forgotten when keyboard stuff was implemented or gotten
	  accidentally deleted sometime.

2002-09-03  Christian Ruppert <arc@gmx.li>
	* uwm/Makefile.am: added define UDE_BIN_PATH for more reliable.
	  restart.
	* uwm/uwmmenu.c: added call for UDE_BIN_PATH/uwm in restart procedure.

2002-06-21  Christian Ruppert <arc@gmx.li>
	* uwm/uwm.c (main), uwm/init.c (InitUWM): moved CheckCPP from InitUWM
	  to main so that it is called before we install SIGCHILD handler.

2002-04-21  Christian Ruppert <arc@gmx.li>
	* uwm/handlers.c: replaced forgotten (ControlMask|Mod1Mask) by
	  UWM_MODIFIERS in HandleKeyRelease.

2002-04-21  Christian Ruppert <arc@gmx.li>
	* configure.in, acconfig.h: added option to disable use of
	  BackingStore and SaveUnder which seem to be buggy under XFree4.
	* init.c: implemented switching off backing store at configure time.
	* uwm/menu.c, uwm/uwm.h: added TheScreen.MenuBackGC to work around
	  buggy XFree4 BackingStore and to make menu drawing slightly more
	  efficient on other servers.
	* uwm/menu.c, uwm/init.c: moved GCs init from menu.c to init.c since
	  menu GCs now are global.
	* uwm/menu.c: adopted file to new location of menu GCs in TheScreen.
	* uwm/menu.h, uwm/uwm.h: moved GCs from menu structure to TheScreen
	  for reasons of efficiency.
	* uwm/menu.c: fixed a typo-bug by replacing backing_store=True by
	  backing_store=WhenMapped
	* uwm/uwm.c, uwm/init.c: moved sigchld installation from init.c to
	  uwm.c where it belongs and works properly.

2002-04-21  Christian Ruppert <arc@gmx.li>
	* config/urdb, config/uwmrc*: applied Stephan Helma's (Debian) patches.

2002-03-05  Christian Ruppert <arc@gmx.li>
	* doc/manual.tex: added documentation for SubMenuTitles option.
	* AUTHORS: added Brian Roberts and corrected obsolete www adress

2002-03-04  Brian Roberts <flicken@wpi.edu>